<resources>
    <string name="app_name">Tema2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="sync_server">Sync with server</string>
    <string name="delete_all">Delete all</string>
</resources>
